Fix gc logging to stdout jdk8 bug.